# afterburner

./: CMakeLists.txt  LICENSE  README.md  cmake.sh
firehose/: LabeledSlider.qml  firehose.pro  main.cpp  main.qml  main.qrc  qfireengine.cpp  qfireengine.h
src/: fire.cpp  fire_engine.cpp  fire_engine.h
